--- a/templates/manage_quiz.html
+++ b/templates/manage_quiz.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div>
-    <a href="{{ url_for('manage_quizzes', quiz_id=quiz.id) }}" class="btn btn-secondary">← Go Back</a>
+    <a href="{{ url_for('admin_bp.manage_quizzes', quiz_id=quiz.id) }}" class="btn btn-secondary">← Go Back</a>
 </div>
 <br>
 <h2>Manage Quiz: {{ quiz.title }}</h2>
@@ -36,7 +36,7 @@
         <div class="col-md-4">
             <div class="card p-3">
                 <h3>Add Question</h3>
-                <form action="{{ url_for('add_question') }}" method="POST"> 
+                <form action="{{ url_for('admin_bp.add_question') }}" method="POST"> 
                     <input type="hidden" name="quiz_id" value="{{ quiz.id }}">     
                     <div>
                         <label>Question:</label>
@@ -75,7 +75,7 @@
         <div class = "col md-3">
             <div class = "card p-3">
                 <h3>Delete Question</h3>
-                <form action="{{ url_for('delete_question') }}" method="post">
+                <form action="{{ url_for('admin_bp.delete_question') }}" method="post">
                     <div>
                         <label for="question_id">Select Question:</label>
                     </div>
@@ -105,7 +105,7 @@
                             <tr>
                                 <td>{{ question.question_statement }}</td>
                                 <td>
-                                    <a href="{{ url_for('edit_question', question_id=question.id) }}">Edit</a>
+                                    <a href="{{ url_for('admin_bp.edit_question', question_id=question.id) }}">Edit</a>
                                 </td>
                             </tr>
                             {% endfor %}
