--- a/templates/quiz_performance.html
+++ b/templates/quiz_performance.html
@@ -60,6 +60,6 @@
     </ul>
     
     <br>
-    <a href="{{ url_for('previous_scores') }}" class="btn btn-dark">Back to Quizzes</a>
+    <a href="{{ url_for('user_bp.previous_scores') }}" class="btn btn-dark">Back to Quizzes</a>
 </div>
 {% endblock %}
