--- a/templates/admin.html
+++ b/templates/admin.html
@@ -14,26 +14,26 @@
     <div class="sidebar">
         <h2>Admin Panel</h2>
     
-        <form action="{{ url_for('view_users') }}" method="get">
+        <form action="{{ url_for('admin_bp.view_users') }}" method="get">
             <button type="submit" class="btn btn-dark btn-block">👥 View Users</button>
         </form>
     
-        <form action="{{ url_for('manage_subjects') }}" method="get">
+        <form action="{{ url_for('admin_bp.manage_subjects') }}" method="get">
             <button type="submit" class="btn btn-dark btn-block">📚 Manage Subjects</button>
         </form>
     
-        <form action="{{ url_for('manage_chapters') }}" method="get">
+        <form action="{{ url_for('admin_bp.manage_chapters') }}" method="get">
             <button type="submit" class="btn btn-dark btn-block">📖 Manage Chapters</button>
         </form>
     
-        <form action="{{ url_for('manage_quizzes') }}" method="get">
+        <form action="{{ url_for('admin_bp.manage_quizzes') }}" method="get">
             <button type="submit" class="btn btn-dark btn-block">📝 Manage Quizzes</button>
         </form>
-        <form action="{{ url_for('admin_search') }}" method="get">
+        <form action="{{ url_for('admin_bp.admin_search') }}" method="get">
             <button type="submit" class="btn btn-dark btn-block">🔎 Search </button>
         </form>
     
-        <form action="{{ url_for('logout') }}" method="post">
+        <form action="{{ url_for('main_bp.logout') }}" method="post">
             <button type="submit" class="btn btn-danger btn-block">🚪 Logout</button>
         </form>
     </div>
