--- a/templates/edit_subject.html
+++ b/templates/edit_subject.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div>
-    <a href="{{ url_for('admin_portal') }}" class="btn btn-secondary">← Go Back</a>
+    <a href="{{ url_for('admin_bp.admin_portal') }}" class="btn btn-secondary">← Go Back</a>
 </div>
 <br>
 <div class="card">
