--- a/templates/login.html
+++ b/templates/login.html
@@ -39,7 +39,7 @@
                             </div>
                         </form>
 
-                        <p class="mt-3 text-center" style="font-size: 14px;">Don't have an account? <a href="{{ url_for('signup') }}">Sign Up</a></p>
+                        <p class="mt-3 text-center" style="font-size: 14px;">Don't have an account? <a href="{{ url_for('auth_bp.signup') }}">Sign Up</a></p>
                     </div>
                 </div>
             </div>
