--- a/templates/manage_chapters.html
+++ b/templates/manage_chapters.html
@@ -7,13 +7,13 @@
         {% for chapter in chapters %}
             <li>
                 {{ chapter.name }} ({{ chapter.subject.name }})
-                <a href="{{ url_for('edit_chapter', chapter_id=chapter.id) }}" class="btn btn-primary btn-sm">Edit</a>
-                <a href="{{ url_for('delete_chapter', chapter_id=chapter.id) }}" class="btn btn-danger btn-sm">Delete</a>
+                <a href="{{ url_for('admin_bp.edit_chapter', chapter_id=chapter.id) }}" class="btn btn-primary btn-sm">Edit</a>
+                <a href="{{ url_for('admin_bp.delete_chapter', chapter_id=chapter.id) }}" class="btn btn-danger btn-sm">Delete</a>
             </li>
             <br>
         {% endfor %}
     </ul>
-    <form action="{{ url_for('add_chapter') }}" method="POST">
+    <form action="{{ url_for('admin_bp.add_chapter') }}" method="POST">
         <div>
             <select name="subject_id" required>
                 <option value="">Select Subject</option>
