--- a/templates/manage_quizzes.html
+++ b/templates/manage_quizzes.html
@@ -6,13 +6,13 @@
     {% for quiz in quizzes %}
         <div>
             <strong>{{ quiz.title }} ({{ quiz.chapter.name }})</strong> 
-            <a href="{{ url_for('manage_quiz', quiz_id=quiz.id) }}">Manage Quiz</a> |
-            <a href="{{ url_for('delete_quiz', quiz_id=quiz.id) }}">Delete</a> |
-            <a href="{{ url_for('edit_quiz', quiz_id=quiz.id) }}">Edit</a>
+            <a href="{{ url_for('admin_bp.manage_quiz', quiz_id=quiz.id) }}">Manage Quiz</a> |
+            <a href="{{ url_for('admin_bp.delete_quiz', quiz_id=quiz.id) }}">Delete</a> |
+            <a href="{{ url_for('admin_bp.edit_quiz', quiz_id=quiz.id) }}">Edit</a>
         </div>
     {% endfor %}
 </ul>
-<form action="{{ url_for('add_quiz') }}" method="POST">
+<form action="{{ url_for('admin_bp.add_quiz') }}" method="POST">
     <select name="chapter_id" required>
         <option value="">Select Chapter</option>
         {% for chapter in chapters %}
