--- a/templates/manage_subjects.html
+++ b/templates/manage_subjects.html
@@ -7,13 +7,13 @@
         {% for subject in subjects %}
             <li>
                 {{ subject.name }} 
-                <a href="{{ url_for('edit_subject', subject_id=subject.id) }}" class="btn btn-primary btn-sm">Edit</a>
-                <a href="{{ url_for('delete_subject', subject_id=subject.id) }}" class="btn btn-danger btn-sm">Delete</a>
+                <a href="{{ url_for('admin_bp.edit_subject', subject_id=subject.id) }}" class="btn btn-primary btn-sm">Edit</a>
+                <a href="{{ url_for('admin_bp.delete_subject', subject_id=subject.id) }}" class="btn btn-danger btn-sm">Delete</a>
             </li>
             <br>
         {% endfor %}
     </ul>
-    <form action="{{ url_for('add_subject') }}" method="post">
+    <form action="{{ url_for('admin_bp.add_subject') }}" method="post">
         <input type="text" class="form-control" name="name" placeholder="Enter Subject Name" required>
         <br>
         <button class="btn btn-dark" type="submit">Add Subject</button>
