--- a/templates/quiz_result.html
+++ b/templates/quiz_result.html
@@ -3,6 +3,6 @@
 <div class="container-fluid">
     <h2>Quiz Results - {{ quiz.title }}</h2>
     <p>Your Score: <strong>{{ score }}/{{ total_questions }}</strong></p>
-    <a href="{{url_for('available_quiz')}}" class="btn btn-secondary">← Go Back</a>
+    <a href="{{url_for('user_bp.available_quiz')}}" class="btn btn-secondary">← Go Back</a>
 </div>
 {% endblock %}
