--- a/templates/signup.html
+++ b/templates/signup.html
@@ -18,7 +18,7 @@
             <form method="POST">
                 <div class="mb-1">
                     <label for="username" class="form-label">Username (Email):</label>
-                    <input type="text" class="form-control" id="username" name="username" placeholder="Enter Username" required>
+                    <input type="text" class="form-control" id="username" name="username" placeholder="Enter Username" value ="{{ username|default('') }}"required>
                 </div>
         
                 <div class="mb-1">
@@ -28,29 +28,29 @@
         
                 <div class="mb-1">
                     <label for="confirm_password" class="form-label">Confirm Password:</label>
-                    <input type="password" class="form-control" id="confirm_password" name="confirm_password" placeholder="Confirm Password" required>
+                    <input type="password" class="form-control" id="confirm_password" name="confirm_password" placeholder="Confirm Password" value ="" required>
                 </div>
         
                 <div class="mb-1">
                     <label for="full_name" class="form-label">Full Name:</label>
-                    <input type="text" class="form-control" id="full_name" name="full_name" placeholder="Enter your full name" required>
+                    <input type="text" class="form-control" id="full_name" name="full_name" placeholder="Enter your full name" value ="{{ full_name|default('') }}" required>
                 </div>
         
                 <div class="mb-1">
                     <label for="qualification" class="form-label">Qualification:</label>
-                    <input type="text" class="form-control" id="qualification" name="qualification" placeholder="Enter your qualification" required>
+                    <input type="text" class="form-control" id="qualification" name="qualification" placeholder="Enter your qualification" value ="{{ qualification|default('') }}" required>
                 </div>
         
                 <div class="mb-1">
                     <label for="dob" class="form-label">Date of Birth:</label>
-                    <input type="date" class="form-control" id="dob" name="dob" required>
+                    <input type="date" class="form-control" id="dob" name="dob" value ="{{ dob|default('') }}" required>
                 </div>
         
                 <div class="d-grid mt-4">
                     <button class="btn btn-primary" type="submit">Sign Up</button>
                 </div>
             </form>
-            <p class="mt-3" style="font-size: 14px;">Already have an account? <a href="{{ url_for('login') }}">Login here</a></p>
+            <p class="mt-3" style="font-size: 14px;">Already have an account? <a href="{{ url_for('auth_bp.login') }}">Login here</a></p>
         </div>
     </div>
 </body>
