--- a/templates/user_search.html
+++ b/templates/user_search.html
@@ -4,7 +4,7 @@
 <div class="container">
     <h2>Search for Quizzes, Chapters, or Subjects</h2>
 
-    <form method="GET" action="{{ url_for('user_search') }}" class="mb-4">
+    <form method="GET" action="{{ url_for('user_bp.user_search') }}" class="mb-4">
         <input type="text" name="q" class="form-control" placeholder="Search..." value="{{ query }}">
         <button type="submit" class="btn btn-dark mt-2">Search</button>
     </form>
@@ -36,7 +36,7 @@
                 {% for quiz in results.quizzes %}
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                         <span>{{ quiz.title }} ({{ quiz.chapter.name }})</span>
-                        <a href="{{ url_for('attempt_quiz', quiz_id=quiz.id) }}" class="btn btn-dark">Start Quiz</a>
+                        <a href="{{ url_for('user_bp.attempt_quiz', quiz_id=quiz.id) }}" class="btn btn-dark">Start Quiz</a>
                     </li>
                 {% endfor %}
             </ul>
