--- a/templates/view_users.html
+++ b/templates/view_users.html
@@ -19,7 +19,7 @@
         <td>{{ user.qualification }}</td>
         <td>{{ user.dob }}</td>
         <td>
-            <form action="{{ url_for('delete_user', user_id=user.id) }}" method="post">
+            <form action="{{ url_for('admin_bp.delete_user', user_id=user.id) }}" method="post">
                 <button type="submit" class="btn btn-danger">Delete</button>
             </form>
         </td>
