--- a/templates/edit_question.html
+++ b/templates/edit_question.html
@@ -31,10 +31,10 @@
 
         <label>Correct Option:</label>
         <select name="correct_option" class="form-control" required>
-            <option value="option1" {% if question.correct_option=='option1' %}selected{% endif %}>Option 1</option>
-            <option value="option2" {% if question.correct_option=='option2' %}selected{% endif %}>Option 2</option>
-            <option value="option3" {% if question.correct_option=='option3' %}selected{% endif %}>Option 3</option>
-            <option value="option4" {% if question.correct_option=='option4' %}selected{% endif %}>Option 4</option>
+            <option value="A" {% if question.correct_option=='A' %}selected{% endif %}>Option 1</option>
+            <option value="B" {% if question.correct_option=='B' %}selected{% endif %}>Option 2</option>
+            <option value="C" {% if question.correct_option=='C' %}selected{% endif %}>Option 3</option>
+            <option value="D" {% if question.correct_option=='D' %}selected{% endif %}>Option 4</option>
         </select>
         <br>
 
