--- a/templates/available_quiz.html
+++ b/templates/available_quiz.html
@@ -3,22 +3,20 @@
 {% block content %}
 <div class="container mt-4">
     <h2>Available Quizzes</h2>
-    {% if subjects and subjects|map(attribute='chapters')|map('length')|sum %}
-        {% for subject in subjects %}
-            <h3 class="mt-3">{{ subject.name }}</h3>
-            <ul class="list-group">
-                {% for chapter in subject.chapters %}
-                    {% for quiz in chapter.quizzes %}
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <span>{{ quiz.title }} - ({{ chapter.name }})</span>
-                            <a href="{{ url_for('user_bp.attempt_quiz', quiz_id=quiz.id) }}" class="btn btn-dark">Start Quiz</a>
-                        </li>
-                    {% endfor %}
+    {% for subject in subjects %}
+        <h3 class="mt-3">{{ subject.name }}</h3>
+        <ul class="list-group">
+            {% for chapter in subject.chapters %}
+                {% for quiz in chapter.quizzes %}
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <span>
+                            {{ quiz.title }} - ({{ chapter.name }})
+                        </span>
+                        <a href="{{ url_for('user_bp.attempt_quiz', quiz_id=quiz.id) }}" class="btn btn-dark">Start Quiz</a>
+                    </li>
                 {% endfor %}
-            </ul>
-        {% endfor %}
-    {% else %}
-        <p class="alert alert-warning mt-3">No Quizzes Available, come back later...</p>
-    {% endif %}
+            {% endfor %}
+        </ul>
+    {% endfor %}
 </div>
 {% endblock %}
