--- a/templates/manage_quiz.html
+++ b/templates/manage_quiz.html
@@ -58,14 +58,24 @@
                         <label>Option D:</label>
                         <input type="text" class ="form-control" name="option4" required>
                     </div>
-                    <div>
-                        <label>Correct Option:</label>
-                        <select name="correct_option">
-                            <option value="A">A</option>
-                            <option value="B">B</option>
-                            <option value="C">C</option>
-                            <option value="D">D</option>
-                        </select>
+                    <div class="d-flex">
+                        <div class="p-2">
+                            <label>Correct Option:</label>
+                            <select name="correct_option">
+                                <option value="A">A</option>
+                                <option value="B">B</option>
+                                <option value="C">C</option>
+                                <option value="D">D</option>
+                            </select>
+                        </div>
+                        <div class="p-2">
+                            <label>Difficulty:</label>
+                            <select name="difficulty">
+                                <option value="easy">Easy</option>
+                                <option value="medium">Medium</option>
+                                <option value="hard">Hard</option>
+                            </select>
+                        </div>
                     </div>
                     <br>
                     <button type="submit" class="btn btn-dark">Add Question</button>
